--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -9,6 +9,7 @@
     android:paddingTop="20dp" >
 
 
+
     <ImageView
         android:id="@+id/canvas"
         android:layout_width="match_parent"
@@ -16,8 +17,16 @@
         android:background="@color/white"
         />
 
+    <TextView
+        android:id="@+id/aisle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/white"
+        android:layout_marginTop="500dp"
+        android:layout_marginLeft="10dp"
+        android:text="aisle"
+        android:textSize="20dp" />
 
 
-
-
-</LinearLayout>
+</RelativeLayout>
