--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,21 +78,34 @@
         android:textSize="15dp" />
 
     <TextView
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:background="@drawable/grass"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="30dp"
+        android:textSize="40dp"
+        android:textColor="#613513"
+        android:text="Indoor Localization" />
+
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/DarkGray"
-        android:layout_marginTop="250dp"
         android:layout_marginLeft="335dp"
+        android:layout_marginTop="250dp"
+        android:background="@color/DarkGray"
         android:text="balcony"
         android:textSize="15dp" />
 
-
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="600dp"
-        android:layout_marginLeft="200dp"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:background="@drawable/grass"
+        android:layout_marginTop="570dp"
+        android:layout_marginLeft="100dp"
+        android:textSize="40dp"
+        android:textColor="#613513"
         android:text="Start" />
 
     <ImageView
@@ -111,15 +124,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="170dp"
         android:layout_marginLeft="320dp"
-        android:src="@drawable/tree2" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="56dp"
         android:src="@drawable/tree2" />
 
     <ImageView
@@ -247,10 +251,66 @@
         android:src="@drawable/drawer" />
 
     <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="340dp"
+        android:layout_marginTop="270dp"
+        android:src="@drawable/f1" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="340dp"
+        android:layout_marginTop="330dp"
+        android:src="@drawable/f2" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="39dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="80dp"
+        android:layout_marginTop="160dp"
+        android:src="@drawable/sl" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="39dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="200dp"
+        android:src="@drawable/sr" />
+
+    <ImageView
         android:layout_width="40dp"
         android:layout_height="39dp"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="380dp"
-        android:layout_marginTop="270dp"
-        android:src="@drawable/f1" />
+        android:layout_marginLeft="155dp"
+        android:layout_marginTop="240dp"
+        android:src="@drawable/door" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="39dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="280dp"
+        android:layout_marginTop="240dp"
+        android:src="@drawable/jj" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="320dp"
+        android:layout_marginTop="400dp"
+        android:src="@drawable/f4" />
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="320dp"
+        android:layout_marginTop="460dp"
+        android:src="@drawable/f4" />
 </RelativeLayout>
