--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,18 +108,7 @@
         android:text="balcony"
         android:textSize="15dp" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:background="@drawable/grass"
-        android:layout_marginTop="590dp"
-        android:layout_marginLeft="30dp"
-        android:textSize="25dp"
-        android:textColor="#619759"
-        android:text="Locate" />
-
-    <TextView
+    <!--    <TextView
         android:id="@+id/button2"
         android:layout_width="150dp"
         android:layout_height="60dp"
@@ -128,7 +117,51 @@
         android:layout_marginLeft="220dp"
         android:textSize="25dp"
         android:textColor="#619759"
-        android:text="Need Rescan?" />
+        android:text="Need Rescan?" />-->
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="590dp"
+        android:background="@drawable/grass"
+        android:text="Reset"
+        android:textColor="#619759"
+        android:textSize="22dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="650dp"
+        android:background="@drawable/grass"
+        android:text="Initial belief PA"
+        android:textColor="#619759"
+        android:textSize="15dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="590dp"
+        android:background="@drawable/grass"
+        android:text="Sense Bayes"
+        android:textColor="#619759"
+        android:textSize="22dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="650dp"
+        android:background="@drawable/grass"
+        android:text="Initial belief Bayes"
+        android:textColor="#619759"
+        android:textSize="15dp" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -320,7 +353,7 @@
         android:layout_marginTop="460dp"
         android:src="@drawable/f4" />
 
-<!--    <ImageView
+    <ImageView
         android:id="@+id/cell2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -390,7 +423,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="260dp"
         android:layout_marginTop="340dp"
-        android:src="@android:drawable/ic_menu_mylocation" />-->
+        android:src="@android:drawable/ic_menu_mylocation" />
 
     <ImageView
         android:id="@+id/compass"
